[package]
name = "turr"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2"
tokio = {version="1.35", features = [ "net", "io-util", "macros", "rt-multi-thread" ]}
futures-lite = { version = "1.11" }
byteorder = "1.5.0"
chrono = "0.4"
tabled = "0.15"
clap = {version="4.4.12", features=["derive"]}